--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "backend server.js",
   "type": "module",
   "scripts": {
+    "test": "mocha test/**/**.test.js",
+    "test:unit": "mocha test/unit/**/*test.js",
+    "test:integration": "mocha test/integration/**/*test.js",
     "server": "node backend/server.js",
     "dev": "nodemon backend/server.js",
     "client": "npm start --prefix frontend"
@@ -28,6 +31,10 @@
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "mocha": "^10.6.0",
+    "nodemon": "^3.1.3",
+    "supertest": "^7.0.0"
   }
 }
